--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "parzel-web-application",
+  "name": "salivax-web-application",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -7,21 +7,25 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:parzel-web-application": "node dist/parzel-web-application/server/server.mjs"
+    "serve:ssr:salivax-web-application": "node dist/salivax-web-application/server/server.mjs"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "^17.3.0",
+    "@angular/cdk": "^17.3.6",
     "@angular/common": "^17.3.0",
     "@angular/compiler": "^17.3.0",
     "@angular/core": "^17.3.0",
     "@angular/forms": "^17.3.0",
+    "@angular/material": "^17.3.6",
     "@angular/platform-browser": "^17.3.0",
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/platform-server": "^17.3.0",
     "@angular/router": "^17.3.0",
     "@angular/ssr": "^17.3.2",
     "express": "^4.18.2",
+    "leaflet": "^1.7.1",
+    "leaflet-polylinedecorator": "^1.6.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
@@ -32,13 +36,18 @@
     "@angular/compiler-cli": "^17.3.0",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
+    "@types/leaflet": "^1.9.12",
     "@types/node": "^18.18.0",
+    "autoprefixer": "^10.4.19",
+    "daisyui": "^4.10.2",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3",
     "typescript": "~5.4.2"
   }
 }
